Company Dashboard: field supervisors, intern assignment, placement status